--- a/springboot-mybatis-wechar/src/main/resources/application.yml
+++ b/springboot-mybatis-wechar/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/luotest?useSSL=false
-    username: root
+    username: luowenlv
     password: luo820
     driver-class-name: com.mysql.jdbc.Driver
 mybatis:
