--- a/springboot-mybatis-wechar/src/main/resources/application.yml
+++ b/springboot-mybatis-wechar/src/main/resources/application.yml
@@ -8,13 +8,19 @@ spring:
     mode: HTML5
     encoding: utf-8
   datasource:
-    url: jdbc:mysql://localhost:3306/luotest?useSSL=false
+    url: jdbc:mysql://localhost:3306/jzdb?useSSL=false
     username: luowenlv
     password: luo820
     driver-class-name: com.mysql.jdbc.Driver
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.luo.model.AreaModel
+  type-aliases-package: com.luo.model
 server:
   port: 8081
+logging:
+  level:
+    com:
+      luo:
+        dao:
+          mapper: debug
 
