--- a/GreenPlatform/pom.xml
+++ b/GreenPlatform/pom.xml
@@ -66,6 +66,20 @@
             <optional>true</optional>
         </dependency>
 
+        <!--转json-->
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+        <!--分页-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+
 
     </dependencies>
 
