--- a/GreenPlatform/src/main/resources/application.yml
+++ b/GreenPlatform/src/main/resources/application.yml
@@ -23,5 +23,11 @@ logging:
       greenplatform:
         dao: debug
 
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
+  params: count=countSql
+
 
 
