--- a/GreenPlatform/pom.xml
+++ b/GreenPlatform/pom.xml
@@ -79,6 +79,12 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.5</version>
         </dependency>
+        <!--二维码-->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.0</version>
+        </dependency>
 
 
     </dependencies>
