--- a/GreenPlatform/pom.xml
+++ b/GreenPlatform/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>core</artifactId>
             <version>3.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.0.9.RELEASE</version>
+        </dependency>
 
 
     </dependencies>
