--- a/GreenPlatform/pom.xml
+++ b/GreenPlatform/pom.xml
@@ -91,6 +91,17 @@
             <version>2.0.9.RELEASE</version>
         </dependency>
 
+        <!--spring切面aop依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.39</version>
+        </dependency>
+
 
     </dependencies>
 
