--- a/GreenPlatform/src/main/resources/application.yml
+++ b/GreenPlatform/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   aop:
     auto: true
 mybatis:
-  mapper-locations: classpath:mapper/*.xml
+  mapper-locations: classpath:mappers/*.xml
   type-aliases-package: com.greenplatform.model
 server:
   port: 8081
