--- a/GreenPlatform/pom.xml
+++ b/GreenPlatform/pom.xml
@@ -44,6 +44,11 @@
                 </exclusion>
             </exclusions>-->
         </dependency>
+        <!--<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>-->
 <!--        servlet-api的依赖-->
         <!--<dependency>
             <groupId>org.apache.tomcat</groupId>
