--- a/GreenPlatform/src/main/resources/application.yml
+++ b/GreenPlatform/src/main/resources/application.yml
@@ -19,8 +19,8 @@ mybatis:
   type-aliases-package: com.greenplatform.model
 server:
   port: 8081
-#  servlet:
-#    context-path: /GreenPlatform-0.0.1-SNAPSHOT-exec
+  #servlet:
+    #context-path: /GreenPlatform-0.0.1-SNAPSHOT-exec  #请求上下文
 logging:
   level:
     com:
@@ -32,6 +32,5 @@ pagehelper:
   reasonable: true
   support-methods-arguments: true
   params: count=countSql
-
 
 
