--- a/GreenPlatform/pom.xml
+++ b/GreenPlatform/pom.xml
@@ -106,6 +106,11 @@
             <version>3.3.0</version>
         </dependency>
         <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
             <version>2.0.9.RELEASE</version>
@@ -165,6 +170,7 @@
             <artifactId>jcl-over-slf4j</artifactId>
             <version>1.7.25</version>
         </dependency>
+
 
 
     </dependencies>
