--- a/GreenPlatform/src/main/resources/application.yml
+++ b/GreenPlatform/src/main/resources/application.yml
@@ -21,11 +21,11 @@ server:
   port: 8081
   servlet:
     context-path: /GreenPlatform_war_exploded  #请求上下文
-logging:
-  level:
-    com:
-      greenplatform:
-        dao: debug
+#logging:
+#  level:
+#    com:
+#      greenplatform:
+#        dao: debug
 
 pagehelper:
   helper-dialect: mysql
