--- a/GreenPlatform-lv2/src/main/resources/application.yml
+++ b/GreenPlatform-lv2/src/main/resources/application.yml
@@ -18,14 +18,14 @@ mybatis:
   mapper-locations: classpath:mappers/**/*.xml
   type-aliases-package: com.greenplatform.model
 server:
-  port: 8080
+  port: 80
   servlet:
     context-path: /GreenPlatform_war_exploded  #请求上下文
-logging:
-  level:
-    com:
-      greenplatform:
-        dao: debug
+#logging:
+#  level:
+#    com:
+#      greenplatform:
+#        dao: debug
 
 pagehelper:
   helper-dialect: mysql
