--- a/GreenPlatform-lv2/pom.xml
+++ b/GreenPlatform-lv2/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.luo</groupId>
     <artifactId>GreenPlatform</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>GreenPlatform</name>
     <description>Green Platform</description>
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <!-- 移除嵌入式tomcat插件 -->
+            <!-- 移除嵌入式tomcat插件-->
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
